--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
+    "boostrap": "^2.0.0",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18"
