--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
     "boostrap": "^2.0.0",
+    "bootstrap": "^5.3.3",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18"
