--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
+    "@reduxjs/toolkit": "^2.3.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
     "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "postcss": "^8",
