--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "axios": "^1.7.7",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
+    "formik": "^2.4.6",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "postcss": "^8",
