--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
     "@reduxjs/toolkit": "^2.3.0",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
@@ -28,7 +29,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15"
   }
 }
