--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
+    "history": "^5.3.0",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
